adding reference to knockout.js cdn

--- a/index.html
+++ b/index.html
@@ -227,6 +227,8 @@
         <a href="#">Back to top</a>
       </p>
     </footer>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/knockout/3.5.0/knockout-min.js" integrity="sha256-Tjl7WVgF1hgGMgUKZZfzmxOrtoSf8qltZ9wMujjGNQk=" crossorigin="anonymous"></script>
 </body>
 </html>
 
