updating links to point to directories instead of files

--- a/publications/index.html
+++ b/publications/index.html
@@ -168,15 +168,15 @@
 										<li>
 											<span class="opener">Publications et Communications</span>
 											<ul>
-												<li><a href="publications.html">Publications</a></li>
-												<li><a href="communications.html">Communications</a></li>
+												<li><a href="/publications">Publications</a></li>
+												<li><a href="/communications">Communications</a></li>
 											</ul>										
 										</li>
 										<li>
 											<span class="opener">Activites et Services</span>
 											<ul>
-												<li><a href="activites.html">Activites</a></li>
-												<li><a href="services.html">Services</a></li>
+												<li><a href="/activites">Activites</a></li>
+												<li><a href="/services">Services</a></li>
 											</ul>
 										</li>
 										<li><a href="/enseignement">Enseignement</a></li>
