updating links to point to directories instead of files

--- a/publications/index.html
+++ b/publications/index.html
@@ -22,7 +22,7 @@
 
 							<!-- Header -->
 								<header id="header">
-									<a href="index.html" class="logo"><strong>Publications</strong> by HTML5 UP</a>
+									<a href="index.html" class="logo"><strong>Publications</strong></a>
 									<ul class="icons">
 										<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 										<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
@@ -36,7 +36,7 @@
 								<section id="banner">
 									<div class="content">
 										<header>
-											<h1>Hi, I’m Editorial<br />
+											<h1>Publications<br />
 											by HTML5 UP</h1>
 											<p>A free and fully responsive site template</p>
 										</header>
@@ -164,7 +164,7 @@
 										<h2>Menu</h2>
 									</header>
 									<ul>
-										<li><a href="index.html">Acceuil</a></li>
+										<li><a href="/">Acceuil</a></li>
 										<li>
 											<span class="opener">Publications et Communications</span>
 											<ul>
