--- a/enseignement/index.html
+++ b/enseignement/index.html
@@ -17,137 +17,137 @@
 			<div id="wrapper">
 
 				<!-- Main -->
-					<div id="main">
-						<div class="inner">
+				<div id="main">
+					<div class="inner">
 
-							<!-- Header -->
-								<header id="header">
-									<a href="index.html" class="logo"><strong>Enseignement</strong></a>
-									<ul class="icons">
-										<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-										<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-										<li><a href="#" class="icon brands fa-snapchat-ghost"><span class="label">Snapchat</span></a></li>
-										<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-										<li><a href="#" class="icon brands fa-medium-m"><span class="label">Medium</span></a></li>
+						<!-- Header -->
+							<header id="header">
+								<a href="index.html" class="logo"><strong>Enseignement</strong></a>
+								<ul class="icons">
+									<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+									<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
+									<li><a href="#" class="icon brands fa-snapchat-ghost"><span class="label">Snapchat</span></a></li>
+									<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+									<li><a href="#" class="icon brands fa-medium-m"><span class="label">Medium</span></a></li>
+								</ul>
+							</header>
+
+						<!-- Banner -->
+							<section id="banner">
+								<div class="content">
+									<header>
+										<h1>Enseignement<br /></h1>
+										<p>A free and fully responsive site template</p>
+									</header>
+									<p>Aenean ornare velit lacus, ac varius enim ullamcorper eu. Proin aliquam facilisis ante interdum congue. Integer mollis, nisl amet convallis, porttitor magna ullamcorper, amet egestas mauris. Ut magna finibus nisi nec lacinia. Nam maximus erat id euismod egestas. Pellentesque sapien ac quam. Lorem ipsum dolor sit nullam.</p>
+									<ul class="actions">
+										<li><a href="#" class="button big">Learn More</a></li>
 									</ul>
+								</div>
+								<span class="image object">
+									<img src="/images/pic10.jpg" alt="" />
+								</span>
+							</section>
+
+						<!-- Section -->
+							<section>
+								<header class="major">
+									<h2>Erat lacinia</h2>
 								</header>
+								<div class="features">
+									<article>
+										<span class="icon fa-gem"></span>
+										<div class="content">
+											<h3>Portitor ullamcorper</h3>
+											<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
+										</div>
+									</article>
+									<article>
+										<span class="icon solid fa-paper-plane"></span>
+										<div class="content">
+											<h3>Sapien veroeros</h3>
+											<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
+										</div>
+									</article>
+									<article>
+										<span class="icon solid fa-rocket"></span>
+										<div class="content">
+											<h3>Quam lorem ipsum</h3>
+											<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
+										</div>
+									</article>
+									<article>
+										<span class="icon solid fa-signal"></span>
+										<div class="content">
+											<h3>Sed magna finibus</h3>
+											<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
+										</div>
+									</article>
+								</div>
+							</section>
 
-							<!-- Banner -->
-								<section id="banner">
-									<div class="content">
-										<header>
-											<h1>Enseignement<br /></h1>
-											<p>A free and fully responsive site template</p>
-										</header>
-										<p>Aenean ornare velit lacus, ac varius enim ullamcorper eu. Proin aliquam facilisis ante interdum congue. Integer mollis, nisl amet convallis, porttitor magna ullamcorper, amet egestas mauris. Ut magna finibus nisi nec lacinia. Nam maximus erat id euismod egestas. Pellentesque sapien ac quam. Lorem ipsum dolor sit nullam.</p>
+						<!-- Section -->
+							<section>
+								<header class="major">
+									<h2>Ipsum sed dolor</h2>
+								</header>
+								<div class="posts">
+									<article>
+										<a href="#" class="image"><img src="/images/pic01.jpg" alt="" /></a>
+										<h3>Interdum aenean</h3>
+										<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
 										<ul class="actions">
-											<li><a href="#" class="button big">Learn More</a></li>
+											<li><a href="#" class="button">More</a></li>
 										</ul>
-									</div>
-									<span class="image object">
-										<img src="/images/pic10.jpg" alt="" />
-									</span>
-								</section>
+									</article>
+									<article>
+										<a href="#" class="image"><img src="/images/pic02.jpg" alt="" /></a>
+										<h3>Nulla amet dolore</h3>
+										<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
+										<ul class="actions">
+											<li><a href="#" class="button">More</a></li>
+										</ul>
+									</article>
+									<article>
+										<a href="#" class="image"><img src="/images/pic03.jpg" alt="" /></a>
+										<h3>Tempus ullamcorper</h3>
+										<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
+										<ul class="actions">
+											<li><a href="#" class="button">More</a></li>
+										</ul>
+									</article>
+									<article>
+										<a href="#" class="image"><img src="/images/pic04.jpg" alt="" /></a>
+										<h3>Sed etiam facilis</h3>
+										<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
+										<ul class="actions">
+											<li><a href="#" class="button">More</a></li>
+										</ul>
+									</article>
+									<article>
+										<a href="#" class="image"><img src="/images/pic05.jpg" alt="" /></a>
+										<h3>Feugiat lorem aenean</h3>
+										<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
+										<ul class="actions">
+											<li><a href="#" class="button">More</a></li>
+										</ul>
+									</article>
+									<article>
+										<a href="#" class="image"><img src="/images/pic06.jpg" alt="" /></a>
+										<h3>Amet varius aliquam</h3>
+										<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
+										<ul class="actions">
+											<li><a href="#" class="button">More</a></li>
+										</ul>
+									</article>
+								</div>
+							</section>
 
-							<!-- Section -->
-								<section>
-									<header class="major">
-										<h2>Erat lacinia</h2>
-									</header>
-									<div class="features">
-										<article>
-											<span class="icon fa-gem"></span>
-											<div class="content">
-												<h3>Portitor ullamcorper</h3>
-												<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
-											</div>
-										</article>
-										<article>
-											<span class="icon solid fa-paper-plane"></span>
-											<div class="content">
-												<h3>Sapien veroeros</h3>
-												<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
-											</div>
-										</article>
-										<article>
-											<span class="icon solid fa-rocket"></span>
-											<div class="content">
-												<h3>Quam lorem ipsum</h3>
-												<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
-											</div>
-										</article>
-										<article>
-											<span class="icon solid fa-signal"></span>
-											<div class="content">
-												<h3>Sed magna finibus</h3>
-												<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
-											</div>
-										</article>
-									</div>
-								</section>
-
-							<!-- Section -->
-								<section>
-									<header class="major">
-										<h2>Ipsum sed dolor</h2>
-									</header>
-									<div class="posts">
-										<article>
-											<a href="#" class="image"><img src="/images/pic01.jpg" alt="" /></a>
-											<h3>Interdum aenean</h3>
-											<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
-											<ul class="actions">
-												<li><a href="#" class="button">More</a></li>
-											</ul>
-										</article>
-										<article>
-											<a href="#" class="image"><img src="/images/pic02.jpg" alt="" /></a>
-											<h3>Nulla amet dolore</h3>
-											<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
-											<ul class="actions">
-												<li><a href="#" class="button">More</a></li>
-											</ul>
-										</article>
-										<article>
-											<a href="#" class="image"><img src="/images/pic03.jpg" alt="" /></a>
-											<h3>Tempus ullamcorper</h3>
-											<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
-											<ul class="actions">
-												<li><a href="#" class="button">More</a></li>
-											</ul>
-										</article>
-										<article>
-											<a href="#" class="image"><img src="/images/pic04.jpg" alt="" /></a>
-											<h3>Sed etiam facilis</h3>
-											<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
-											<ul class="actions">
-												<li><a href="#" class="button">More</a></li>
-											</ul>
-										</article>
-										<article>
-											<a href="#" class="image"><img src="/images/pic05.jpg" alt="" /></a>
-											<h3>Feugiat lorem aenean</h3>
-											<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
-											<ul class="actions">
-												<li><a href="#" class="button">More</a></li>
-											</ul>
-										</article>
-										<article>
-											<a href="#" class="image"><img src="/images/pic06.jpg" alt="" /></a>
-											<h3>Amet varius aliquam</h3>
-											<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
-											<ul class="actions">
-												<li><a href="#" class="button">More</a></li>
-											</ul>
-										</article>
-									</div>
-								</section>
-
-						</div>
 					</div>
+				</div>
 
 				<!-- Sidebar -->
-					<div id="sidebar">
+				<div id="sidebar">
 						<div class="inner">
 
 							<!-- Search -->
@@ -167,15 +167,15 @@
 										<li>
 											<span class="opener">Publications et Communications</span>
 											<ul>
-												<li><a href="publications.html">Publications</a></li>
-												<li><a href="communications.html">Communications</a></li>
+												<li><a href="/publications">Publications</a></li>
+												<li><a href="/communications">Communications</a></li>
 											</ul>										
 										</li>
 										<li>
 											<span class="opener">Activites et Services</span>
 											<ul>
-												<li><a href="activites.html">Activites</a></li>
-												<li><a href="services.html">Services</a></li>
+												<li><a href="/activites">Activites</a></li>
+												<li><a href="/services">Services</a></li>
 											</ul>
 										</li>
 										<li><a href="/enseignement">Enseignement</a></li>
@@ -228,7 +228,7 @@
 								</footer>
 
 						</div>
-					</div>
+				</div>
 
 			</div>
 
