--- a/publications/index.html
+++ b/publications/index.html
@@ -148,7 +148,7 @@
 					</div>
 
 				<!-- Sidebar -->
-					<div id="sidebar">
+				<div id="sidebar">
 						<div class="inner">
 
 							<!-- Search -->
@@ -164,7 +164,7 @@
 										<h2>Menu</h2>
 									</header>
 									<ul>
-										<li><a href="/">Acceuil</a></li>
+										<li><a href="index.html">Acceuil</a></li>
 										<li>
 											<span class="opener">Publications et Communications</span>
 											<ul>
@@ -229,7 +229,7 @@
 								</footer>
 
 						</div>
-					</div>
+				</div>
 
 			</div>
 
