adding formation section with its sub-folders

--- a/elements.html
+++ b/elements.html
@@ -437,7 +437,7 @@ print 'It took ' + i + ' iterations to sort the deck.';
 
 						</div>
 					</div>
-					
+
 				<!-- Sidebar -->
 				<div id="sidebar">
 						<div class="inner">
@@ -472,7 +472,7 @@ print 'It took ' + i + ' iterations to sort the deck.';
 										</li>
 										<li><a href="/enseignement">Enseignement</a></li>
 										<li><a href="/evenements">Evenements</a></li>
-										<li><a href="/biographie">Another Biographie</a></li>
+										<li><a href="/biographie">Biographie</a></li>
 									</ul>
 								</nav>
 
