--- a/generic.html
+++ b/generic.html
@@ -9,7 +9,7 @@
 		<title>Generic - Editorial by HTML5 UP</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
+		<link rel="stylesheet" href="/assets/css/main.css" />
 	</head>
 	<body class="is-preload">
 
@@ -101,7 +101,7 @@
 										</li>
 										<li><a href="/enseignement">Enseignement</a></li>
 										<li><a href="/evenements">Evenements</a></li>
-										<li><a href="/biographie">Another Biographie</a></li>
+										<li><a href="/biographie">Biographie</a></li>
 									</ul>
 								</nav>
 
