--- a/communications/index.html
+++ b/communications/index.html
@@ -164,7 +164,7 @@
 										<h2>Menu</h2>
 									</header>
 									<ul>
-										<li><a href="index.html">Acceuil</a></li>
+										<li><a href="/">Acceuil</a></li>
 										<li>
 											<span class="opener">Publications et Communications</span>
 											<ul>
@@ -181,7 +181,14 @@
 										</li>
 										<li><a href="/enseignement">Enseignement</a></li>
 										<li><a href="/evenements">Evenements</a></li>
-										<li><a href="/biographie">Another Biographie</a></li>
+										<li><a href="/biographie">Biographie</a></li>
+										<li>
+											<span class="opener">Formation</span>
+											<ul>
+													<li><a href="/activites">License</a></li>
+													<li><a href="/services">Doctorat</a></li>
+												</ul>
+											</li>										
 									</ul>
 								</nav>
 
