--- a/publications/index.html
+++ b/publications/index.html
@@ -185,8 +185,9 @@
 										<li>
 											<span class="opener">Formation</span>
 											<ul>
-													<li><a href="/activites">License</a></li>
-													<li><a href="/services">Doctorat</a></li>
+													<li><a href="/license">License</a></li>
+													<li><a href="/master">Master</a></li>
+													<li><a href="/doctorat">Doctorat</a></li>													
 												</ul>
 											</li>										
 									</ul>
