--- a/activites/index.html
+++ b/activites/index.html
@@ -22,7 +22,7 @@
 
 							<!-- Header -->
 								<header id="header">
-									<a href="index.html" class="logo"><strong>Communications</strong></a>
+									<a href="index.html" class="logo"><strong>Activites</strong></a>
 									<ul class="icons">
 										<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 										<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
@@ -36,7 +36,7 @@
 								<section id="banner">
 									<div class="content">
 										<header>
-											<h1>Communications<br />
+											<h1>Activites<br />
 											by HTML5 UP</h1>
 											<p>A free and fully responsive site template</p>
 										</header>
@@ -189,7 +189,7 @@
 														<li><a href="/master">Master</a></li>
 														<li><a href="/doctorat">Doctorat</a></li>													
 													</ul>
-												</li>										
+												</li>									
 									</ul>
 								</nav>
 
