--- a/enseignement/index.html
+++ b/enseignement/index.html
@@ -182,12 +182,13 @@
 										<li><a href="/evenements">Evenements</a></li>
 										<li><a href="/biographie">Biographie</a></li>
 										<li>
-											<span class="opener">Formation</span>
-											<ul>
-													<li><a href="/activites">License</a></li>
-													<li><a href="/services">Doctorat</a></li>
-												</ul>
-											</li>										
+												<span class="opener">Formation</span>
+												<ul>
+														<li><a href="/license">License</a></li>
+														<li><a href="/master">Master</a></li>
+														<li><a href="/doctorat">Doctorat</a></li>													
+													</ul>
+												</li>									
 									</ul>
 								</nav>
 
