--- a/master/index.html
+++ b/master/index.html
@@ -22,7 +22,7 @@
 
 							<!-- Header -->
 								<header id="header">
-									<a href="index.html" class="logo"><strong>Publications</strong></a>
+									<a href="index.html" class="logo"><strong>Master</strong></a>
 									<ul class="icons">
 										<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 										<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
@@ -36,8 +36,7 @@
 								<section id="banner">
 									<div class="content">
 										<header>
-											<h1>Publications<br />
-											by HTML5 UP</h1>
+											<h1>Master<br /></h1>
 											<p>A free and fully responsive site template</p>
 										</header>
 										<p>Aenean ornare velit lacus, ac varius enim ullamcorper eu. Proin aliquam facilisis ante interdum congue. Integer mollis, nisl amet convallis, porttitor magna ullamcorper, amet egestas mauris. Ut magna finibus nisi nec lacinia. Nam maximus erat id euismod egestas. Pellentesque sapien ac quam. Lorem ipsum dolor sit nullam.</p>
@@ -183,12 +182,13 @@
 										<li><a href="/evenements">Evenements</a></li>
 										<li><a href="/biographie">Biographie</a></li>
 										<li>
-											<span class="opener">Formation</span>
-											<ul>
-													<li><a href="/activites">License</a></li>
-													<li><a href="/services">Doctorat</a></li>
-												</ul>
-											</li>										
+												<span class="opener">Formation</span>
+												<ul>
+														<li><a href="/license">License</a></li>
+														<li><a href="/master">Master</a></li>
+														<li><a href="/doctorat">Doctorat</a></li>													
+													</ul>
+												</li>								
 									</ul>
 								</nav>
 
