adding mustache and jquery scripts

--- a/biographie/index.html
+++ b/biographie/index.html
@@ -10,6 +10,7 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="/assets/css/main.css" />
+		<script src="https://requirejs.org/docs/release/2.3.6/minified/require.js" />
 	</head>
 	<body class="is-preload">
 
