--- a/index.html
+++ b/index.html
@@ -164,6 +164,8 @@
 										<h2>Menu</h2>
 									</header>
 									<ul>
+											<ul class="items">
+											</ul>	
 										<li><a href="/">Acceuil</a></li>
 										<li>
 											<span class="opener">Publications et Communications</span>
@@ -242,11 +244,15 @@
 			</div>
 
 		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
+			<script src="jquery.js"></script>
 			<script src="assets/js/browser.min.js"></script>
 			<script src="assets/js/breakpoints.min.js"></script>
 			<script src="assets/js/util.js"></script>
 			<script src="assets/js/main.js"></script>
+			<script src="assets/js/require.js" />
+			<script src="assets/js/mustache.js"></script>
+			<script src="assets/js/jquery.mustache.js"></script>
+			<script src="assets/js/templating.js" />
 
 	</body>
 </html>
