--- a/sidebar.html
+++ b/sidebar.html
@@ -14,7 +14,7 @@
 									<header class="major">
 										<h2>Menu</h2>
 									</header>
-									<ul>
+									<ul class="items">
 										<li><a href="/">Acceuil</a></li>
 										<li>
 											<span class="opener">Publications et Communications</span>
