--- a/index.html
+++ b/index.html
@@ -251,6 +251,8 @@
 			<script src="assets/js/mustache.js"></script>
 			<script src="assets/js/jquery.mustache.js"></script>
 			<script src="assets/js/templating.js" />
-
+		<script>
+			window.loadSidebar();	
+		</script>
 	</body>
 </html>
