updating templating script

--- a/index.html
+++ b/index.html
@@ -250,9 +250,6 @@
 			<script src="assets/js/main.js"></script>
 			<script src="assets/js/mustache.js"></script>
 			<script src="assets/js/jquery.mustache.js"></script>
-			<script src="assets/js/templating.js" />
-		<script>
-			window.loadSidebar();	
-		</script>
+			<script src="assets/js/templating.js" ></script>
 	</body>
 </html>
