--- a/license/index.html
+++ b/license/index.html
@@ -10,7 +10,6 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="/assets/css/main.css" />
-		<script src="https://requirejs.org/docs/release/2.3.6/minified/require.js" />
 	</head>
 	<body class="is-preload">
 
@@ -151,49 +150,24 @@
 				<!-- Sidebar -->
 				<div id="sidebar">
 						<div class="inner">
-
+	
 							<!-- Search -->
 								<section id="search" class="alt">
 									<form method="post" action="#">
 										<input type="text" name="query" id="query" placeholder="Search" />
 									</form>
 								</section>
-
+	
 							<!-- Menu -->
 								<nav id="menu">
 									<header class="major">
 										<h2>Menu</h2>
 									</header>
 									<ul>
-										<li><a href="/">Acceuil</a></li>
-										<li>
-											<span class="opener">Publications et Communications</span>
-											<ul>
-												<li><a href="/publications">Publications</a></li>
-												<li><a href="/communications">Communications</a></li>
-											</ul>										
-										</li>
-										<li>
-											<span class="opener">Activites et Services</span>
-											<ul>
-												<li><a href="/activites">Activites</a></li>
-												<li><a href="/services">Services</a></li>
-											</ul>
-										</li>
-										<li><a href="/enseignement">Enseignement</a></li>
-										<li><a href="/evenements">Evenements</a></li>
-										<li><a href="/biographie">Biographie</a></li>
-										<li>
-												<span class="opener">Formation</span>
-												<ul>
-														<li><a href="/license">License</a></li>
-														<li><a href="/master">Master</a></li>
-														<li><a href="/doctorat">Doctorat</a></li>													
-													</ul>
-												</li>									
+								
 									</ul>
 								</nav>
-
+	
 							<!-- Section -->
 								<section>
 									<header class="major">
@@ -217,7 +191,7 @@
 										<li><a href="#" class="button">More</a></li>
 									</ul>
 								</section>
-
+	
 							<!-- Section -->
 								<section>
 									<header class="major">
@@ -231,23 +205,25 @@
 										Nashville, TN 00000-0000</li>
 									</ul>
 								</section>
-
+	
 							<!-- Footer -->
 								<footer id="footer">
 									<p class="copyright">&copy; Untitled. All rights reserved. Demo Images: <a href="https://unsplash.com">Unsplash</a>. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
 								</footer>
-
+	
 						</div>
+					</div>
+	
 				</div>
-
-			</div>
-
-		<!-- Scripts -->
-			<script src="/assets/js/jquery.min.js"></script>
-			<script src="/assets/js/browser.min.js"></script>
-			<script src="/assets/js/breakpoints.min.js"></script>
-			<script src="/assets/js/util.js"></script>
-			<script src="/assets/js/main.js"></script>
-
+	
+			<!-- Scripts -->
+				<script src="jquery.js"></script>
+				<script src="assets/js/browser.min.js"></script>
+				<script src="assets/js/breakpoints.min.js"></script>
+				<script src="assets/js/util.js"></script>
+				<script src="assets/js/mustache.js"></script>
+				<script src="assets/js/jquery.mustache.js"></script>
+				<script src="assets/js/templating.js" ></script>
+				<script src="assets/js/main.js"></script>
 	</body>
 </html>
