--- a/license/index.html
+++ b/license/index.html
@@ -218,12 +218,12 @@
 	
 			<!-- Scripts -->
 				<script src="jquery.js"></script>
-				<script src="assets/js/browser.min.js"></script>
-				<script src="assets/js/breakpoints.min.js"></script>
-				<script src="assets/js/util.js"></script>
-				<script src="assets/js/mustache.js"></script>
-				<script src="assets/js/jquery.mustache.js"></script>
-				<script src="assets/js/templating.js" ></script>
-				<script src="assets/js/main.js"></script>
+				<script src="/assets/js/browser.min.js"></script>
+				<script src="/assets/js/breakpoints.min.js"></script>
+				<script src="/assets/js/util.js"></script>
+				<script src="/assets/js/mustache.js"></script>
+				<script src="/assets/js/jquery.mustache.js"></script>
+				<script src="/assets/js/templating.js" ></script>
+				<script src="/assets/js/main.js"></script>
 	</body>
 </html>
