updating index.html in each sub-dir

--- a/enseignement/index.html
+++ b/enseignement/index.html
@@ -10,7 +10,6 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="/assets/css/main.css" />
-		<script src="https://requirejs.org/docs/release/2.3.6/minified/require.js" />
 	</head>
 	<body class="is-preload">
 
@@ -217,7 +216,7 @@
 			</div>
 
 		<!-- Scripts -->
-			<script src="jquery.js"></script>
+		<script src="/jquery.js"></script>
 			<script src="/assets/js/browser.min.js"></script>
 			<script src="/assets/js/breakpoints.min.js"></script>
 			<script src="/assets/js/util.js"></script>
@@ -225,5 +224,6 @@
 			<script src="/assets/js/jquery.mustache.js"></script>
 			<script src="/assets/js/templating.js" ></script>
 			<script src="/assets/js/main.js"></script>
+
 	</body>
 </html>
