--- a/publications/index.html
+++ b/publications/index.html
@@ -217,7 +217,7 @@
 			</div>
 
 		<!-- Scripts -->
-			<script src="jquery.js"></script>
+			<script src="/jquery.js"></script>
 			<script src="/assets/js/browser.min.js"></script>
 			<script src="/assets/js/breakpoints.min.js"></script>
 			<script src="/assets/js/util.js"></script>
