adding showdown initializer

--- a/index.html
+++ b/index.html
@@ -49,7 +49,17 @@
 										<img src="images/pic10.jpg" alt="" />
 									</span>
 								</section>
-
+								<div class="slide">
+										<section class="hbox" data-markdown>
+										 ## Who Am I?
+									   
+										 * Lead developer of [Modernizr](//modernizr.com)
+										 * Project lead of [HTML5 Boilerplate](//h5bp.com)
+										 * I curate that [page of polyfills](//bit.ly/polyfills)
+										 * Member of jQuery Team
+										 * Developer Relations on Google Chrome team
+										 </section>
+								</div>
 							<!-- Section -->
 								<section>
 									<header class="major">
@@ -217,6 +227,7 @@
 			</div>
 
 		<!-- Scripts -->
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/reveal.js/3.8.0/js/reveal.min.js" integrity="sha256-pv4AarTAzSO6lz+bbMPwmV29XMjkzmFOn601b2pWqXE=" crossorigin="anonymous"></script>
 			<script src="/jquery.js"></script>
 			<script src="/assets/js/browser.min.js"></script>
 			<script src="/assets/js/breakpoints.min.js"></script>
