--- a/index.html
+++ b/index.html
@@ -228,13 +228,14 @@
 
 		<!-- Scripts -->
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/reveal.js/3.8.0/js/reveal.min.js" integrity="sha256-pv4AarTAzSO6lz+bbMPwmV29XMjkzmFOn601b2pWqXE=" crossorigin="anonymous"></script>
-			<script src="/jquery.js"></script>
-			<script src="/assets/js/browser.min.js"></script>
-			<script src="/assets/js/breakpoints.min.js"></script>
-			<script src="/assets/js/util.js"></script>
-			<script src="/assets/js/mustache.js"></script>
-			<script src="/assets/js/jquery.mustache.js"></script>
-			<script src="/assets/js/templating.js" ></script>
-			<script src="/assets/js/main.js"></script>
+		<script src="https://unpkg.com/showdown/dist/showdown.min.js"></script>
+		<script src="/jquery.js"></script>
+		<script src="/assets/js/browser.min.js"></script>
+		<script src="/assets/js/breakpoints.min.js"></script>
+		<script src="/assets/js/util.js"></script>
+		<script src="/assets/js/mustache.js"></script>
+		<script src="/assets/js/jquery.mustache.js"></script>
+		<script src="/assets/js/templating.js" ></script>
+		<script src="/assets/js/main.js"></script>
 	</body>
 </html>
