loading markdown from md in github repos

--- a/index.html
+++ b/index.html
@@ -519,5 +519,9 @@ print 'It took ' + i + ' iterations to sort the deck.';
 		<script src="/assets/js/jquery.mustache.js"></script>
 		<script src="/assets/js/templating.js" ></script>
 		<script src="/assets/js/main.js"></script>
+
+		<script>
+			window.appendMdTo("./doc.md", $("markdown-container"));
+		</script>
 	</body>
 </html>
