adding fadein effect after loading markdown data

--- a/index.html
+++ b/index.html
@@ -18,9 +18,7 @@
 
 				<!-- Main -->
 				<div id="main">
-						<div class="inner">
-
-							
+						<div class="inner"							
 							<!-- Header -->
 							<header id="header">
 								<a href="index.html" class="logo"><strong>Editorial</strong> by HTML5 UP</a>
@@ -509,7 +507,17 @@ print 'It took ' + i + ' iterations to sort the deck.';
 									<li><a href="#" class="button">More</a></li>
 								</ul>
 							</section>
-
+							<section class="slide">
+									<section class="hbox" data-markdown>
+									 ## Who Am I?
+								   
+									 * Lead developer of [Modernizr](//modernizr.com)
+									 * Project lead of [HTML5 Boilerplate](//h5bp.com)
+									 * I curate that [page of polyfills](//bit.ly/polyfills)
+									 * Member of jQuery Team
+									 * Developer Relations on Google Chrome team
+									 </section>
+									</section>
 						<!-- Section -->
 							<section>
 								<header class="major">
