--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
 							<section id="markdown-container" style="display: none;"></section>
 							<div class="slide">
 								<section class="hbox"> 
+									<header>Elements </header>
 									<div class="row" style="display: none;" data-markdown>
-										# Elements
 										## Sample Content
 										Praesent ac adipiscing ullamcorper semper ut amet ac risus. Lorem sapien ut odio odio nunc. Ac adipiscing nibh porttitor erat risus justo adipiscing adipiscing amet placerat accumsan. Vis. Faucibus odio magna tempus adipiscing a non. In mi primis arcu ut non accumsan vivamus ac blandit adipiscing adipiscing arcu metus praesent turpis eu ac lacinia nunc ac commodo gravida adipiscing eget accumsan ac nunc adipiscing adipiscing lorem ipsum dolor sit amet nullam veroeros adipiscing.										
 									</div>
