adding fadein effect after loading markdown data

--- a/biographie/index.html
+++ b/biographie/index.html
@@ -39,10 +39,15 @@
 									<header class="main">
 										<h1>Biographie</h1>
 									</header>
-
+									<section class="slide">
+											<section class="hbox" style="display: none;" data-markdown>
+											## Jalila AIT SOUDANE 
+											- Professeur (PHD) d’Economie et de Gestion à l’Université Mohammed V de Rabat. Maroc 
+											- jalila.ait-soudane@um5.ac.ma 	
+											</section>
+									</section>
 									<section id="markdown-container" style="display: none;"></section>
 								</section>
-
 						</div>
 					</div>
 					
