--- a/doctorat/index.html
+++ b/doctorat/index.html
@@ -102,7 +102,8 @@
 		<script>
 			$(document).ready(() => {
 				window.loadMarkdowns();
-				window.appendMdTo("./doctorat.md", $("#markdown-container"));
+				window.appendMdTo("./encadrement-de-theses.md", $("#markdown-container"));
+				window.appendMdTo("./participation-a-des-jurys.md", $("#markdown-container"));
 			});
 		</script>
 	</body>
