adding doctorat rubrique

--- a/doctorat/index.html
+++ b/doctorat/index.html
@@ -104,7 +104,7 @@
 			$(document).ready(() => {
 				window.loadMarkdowns();
 				window.appendMdTo("./encadrement-de-theses.md", $("#markdown-container-0"));
-				window.appendMdTo("./participation-a-des-jurys.md", $("#markdown-container-1"));
+				window.appendMdTo("./participation-au-jurys.md", $("#markdown-container-1"));
 			});
 		</script>
 	</body>
