updating index.html licence rubrique e

--- a/licence/index.html
+++ b/licence/index.html
@@ -24,7 +24,7 @@
 
 							<!-- Header -->
 								<header id="header">
-									<a href="index.html" class="logo"><strong>Biographie</strong></a>
+									<a href="index.html" class="logo"><strong>Licence</strong></a>
 									<ul class="icons">
 										<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 										<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
@@ -37,7 +37,7 @@
 							<!-- Content -->
 								<section>
 									<header class="main">
-										<h1>License</h1>
+										<h1>Licence</h1>
 									</header>
 									<section id="markdown-container" style="display: none;"></section>
 								</section>
