--- a/livres/index.html
+++ b/livres/index.html
@@ -9,7 +9,7 @@
 		<title>Editorial by HTML5 UP</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href/assets/css/main.css" />
+		<link rel="stylesheet" href="/assets/css/main.css" />
 		<script src="https://unpkg.com/showdown/dist/showdown.min.js"></script>
 
 	</head>
@@ -94,14 +94,14 @@
 			</div>
 
 		<!-- Scripts -->
-		<script src="/jquery.js"></script>
-		<script src="/assets/js/browser.min.js"></script>
-		<script src="/assets/js/breakpoints.min.js"></script>
-		<script src="/assets/js/mustache.js"></script>
-		<script src="/assets/js/jquery.mustache.js"></script>
-		<script src="/assets/js/util.js"></script>
-		<script src="/assets/js/templating.js" ></script>
-		<script src="/assets/js/main.js"></script>
+		<script src="="/jquery.js"></script>
+		<script src="="/assets/js/browser.min.js"></script>
+		<script src="="/assets/js/breakpoints.min.js"></script>
+		<script src="="/assets/js/mustache.js"></script>
+		<script src="="/assets/js/jquery.mustache.js"></script>
+		<script src="="/assets/js/util.js"></script>
+		<script src="="/assets/js/templating.js" ></script>
+		<script src="="/assets/js/main.js"></script>
 
 		<script>
 			$(document).ready(() => {
