--- a/livres/index.html
+++ b/livres/index.html
@@ -42,7 +42,7 @@
 										<p id="markdown-container" style="display: none;"><span  class="image left"><img src="/images/livre1.jpg" alt=""></p>
 										<br/>
 										<p id="markdown-container1" style="display: none;">
-										<span class="image-right"><img src="/images/livre2.jpg" alt=""></span></p>
+										<span class="image right"><img src="/images/livre2.jpg" alt=""></span></p>
 									<section></section>
 								</section>
 						</div>
