updating home page content

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 					<div class="inner">							
 						<!-- Header -->
 						<header id="header">
+							<h1>Bienvenue!</h1>
 						</header>
 						<p id="markdown-container" style="display: none;"></p>
 						</div>
