updating home page content

--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
 					<div class="inner">							
 						<!-- Header -->
 						<header id="header">
+							<img src="images/logo_fsjes.jpg" />
+							<img src="images/logo_msrh.png" />
+							<img src="images/logo1.jpg" />
 						</header>
 						<h1>Bienvenue!</h1>
 						<p id="header-container" style="display: none;"></p>
