adding evenemenet rubrique content

--- a/index.html
+++ b/index.html
@@ -23,7 +23,32 @@
 						<header id="header">
 						</header>
 						<h1>Bienvenue!</h1>
-						<p id="header-container" style="display: none;"></p>
+						<section>
+								<header class="major">
+									<h2>Erat lacinia</h2>
+								</header>
+								<div class="features">
+									<article>
+										<span class="icon fa-gem"></span>
+										<div class="content">
+											<h3>Jalila AIT SOUDANE professeur habilité à l’Université Mohammed v
+													de Rabat. </h3>
+										</div>
+									</article>
+									<article>
+										<span class="icon solid fa-paper-plane"></span>
+										<div class="content">
+											<h3>Coordinatrice du Master Management stratégique des</h3>
+										</div>
+									</article>
+									<article>
+										<span class="icon solid fa-rocket"></span>
+										<div class="content">
+											<h3>Ressources Humaines à FSJES Agdal </h3>
+										</div>
+									</article>
+								</div>
+							</section>
 						<p id="markdown-container" style="display: none;"></p>
 						</div>
 					</div>				
@@ -124,7 +149,6 @@
 				window.loadMarkdowns();
 				window.loadHeader();
 				window.appendMdTo("./acceuil.md", $("#markdown-container"));
-				window.appendMdTo("./header.md", $("#header-container"));
 			});
 				
 		</script>
