updating acceuil header content

--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
 						<h1>Bienvenue!</h1>
 						<section>
 								<header class="major">
-									<h2>Erat lacinia</h2>
+									<h2>Jalila AIT SOUDANE </h2>
 								</header>
 								<div class="features">
 									<article>
 										<span class="icon fa-gem"></span>
 										<div class="content">
-											<h3>Jalila AIT SOUDANE professeur habilité à l’Université Mohammed v
+											<h3>professeur habilité à l’Université Mohammed v
 													de Rabat. </h3>
 										</div>
 									</article>
