--- a/index.html
+++ b/index.html
@@ -36,13 +36,13 @@
 										</div>
 									</article>
 									<article>
-										<span class="icon solid fa-paper-plane"></span>
+										<span class="icon solid fa-gem"></span>
 										<div class="content">
 											<h3>Coordinatrice du Master Management stratégique des</h3>
 										</div>
 									</article>
 									<article>
-										<span class="icon solid fa-rocket"></span>
+										<span class="icon solid fa-gem"></span>
 										<div class="content">
 											<h3>Ressources Humaines à FSJES Agdal </h3>
 										</div>
