updating evenements content

--- a/evenements/index.html
+++ b/evenements/index.html
@@ -27,51 +27,27 @@
 								<div class="posts">
 										<article>
 											<a class="image" href="#"><img alt="" src="/images/event1.jpg"></a>
-											<h3>Interdum aenean</h3>
+											<!-- <h3>Interdum aenean</h3>
 											<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
 											<ul class="actions">
 												<li><a class="button" href="#">More</a></li>
-											</ul>
+											</ul> -->
 										</article>
 										<article>
 											<a class="image" href="#"><img alt="" src="/images/event2.jpg"></a>
-											<h3>Nulla amet dolore</h3>
+											<!-- <h3>Nulla amet dolore</h3>
 											<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
 											<ul class="actions">
 												<li><a class="button" href="#">More</a></li>
-											</ul>
+											</ul> -->
 										</article>
 										<article>
 											<a class="image" href="#"><img alt="" src="/images/event3.jpg"></a>
-											<h3>Tempus ullamcorper</h3>
+											<!-- <h3>Tempus ullamcorper</h3>
 											<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
 											<ul class="actions">
 												<li><a class="button" href="#">More</a></li>
-											</ul>
-										</article>
-										<article>
-											<a class="image" href="#"><img alt="" src="images/pic04.jpg"></a>
-											<h3>Sed etiam facilis</h3>
-											<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
-											<ul class="actions">
-												<li><a class="button" href="#">More</a></li>
-											</ul>
-										</article>
-										<article>
-											<a class="image" href="#"><img alt="" src="images/pic05.jpg"></a>
-											<h3>Feugiat lorem aenean</h3>
-											<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
-											<ul class="actions">
-												<li><a class="button" href="#">More</a></li>
-											</ul>
-										</article>
-										<article>
-											<a class="image" href="#"><img alt="" src="images/pic06.jpg"></a>
-											<h3>Amet varius aliquam</h3>
-											<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
-											<ul class="actions">
-												<li><a class="button" href="#">More</a></li>
-											</ul>
+											</ul> -->
 										</article>
 									</div>
 
